# SwiftVM

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: android.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/swift/vm/: MainActivity.java
android/app/src/main/jni/: CMakeLists.txt  android_entry.cpp  android_entry.h
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
scripts/: build-android.sh  build-riscv64-linux.sh
source/: CMakeLists.txt
source/base/: CMakeLists.txt  common_funcs.h  file.cpp  file.h  logging.cpp  logging.h  scope_exit.h  types.h
source/compiler/: CMakeLists.txt
source/compiler/clang/: CMakeLists.txt  clang.cpp  clang.h
source/compiler/clang/antlr/: clang.g4
source/compiler/slang/: CMakeLists.txt  attrs.h  class.cpp  class.h  context.cpp  context.h  expression.cpp  expression.h  field.cpp  field.h  method.cpp  method.h  slang.cpp  slang.h
source/compiler/slang/antlr/: slang.g4
source/runtime/: CMakeLists.txt
source/runtime/backend/: address_space.cpp  address_space.h  asm_interp.cpp  asm_interp.h  cache_clear.cpp  cache_clear.h  code_cache.cpp  code_cache.h  context.h  dummy_entry.cpp  entrypoint.h  host_function.h  host_isa.cpp  host_isa.h  interface.cpp  interpreter.cpp  interpreter.h  jit_code.h  mem_map.cpp  mem_map.h  module.cpp  module.h  reg_alloc.cpp  reg_alloc.h  runtime.cpp  runtime.h  signal_handler.cpp  signal_handler.h  smc_tracker.cpp  smc_tracker.h  trampolines.cpp  trampolines.h  translate_table.h  translator.cpp  translator.h
source/runtime/backend/arm64/: constant.h  context.S  defines.h  marcos.h  trampolines.cpp  trampolines.h
source/runtime/backend/arm64/interp/: entrypoints.h
source/runtime/backend/arm64/jit/: flags.cpp  jit_context.cpp  jit_context.h  translator.cpp  translator.h
source/runtime/backend/interp/: interpreter.cpp  interpreter.h
source/runtime/backend/riscv64/: defines.h  trampolines.cpp  trampolines.h
source/runtime/backend/riscv64/jit/: jit_context.cpp  jit_context.h
source/runtime/common/: address_hash_map.h  alignment.h  bit_fields.h  cast_utils.h  cityhash.cpp  cityhash.h  common_funcs.h  file.cpp  file.h  function_info.h  logging.cpp  logging.h  lru_cache.h  mem_arena.h  object_pool.h  range_map.h  range_mutex.h  scope_exit.h  slab_alloc.cc  slab_alloc.h  spin_lock.cpp  spin_lock.h  swap.h  types.h  variant_util.h  virtual_vector.cpp  virtual_vector.h
source/runtime/frontend/: CMakeLists.txt  function_abi.h  ir_assembler.cpp  ir_assembler.h
source/runtime/frontend/arm64/: CMakeLists.txt  arm64_decode_smoke.cpp  arm64_frontend.cpp  arm64_frontend.h  cpu.h
source/runtime/frontend/slang/: CMakeLists.txt  slang_frontend.cpp  slang_frontend.h
source/runtime/frontend/x86/: CMakeLists.txt  cpu.h  decoder.cc  decoder.h
source/runtime/include/: address_space.h  config.h  sruntime.h
source/runtime/ir/: allocate.cpp  allocator.h  args.cpp  args.h  block.cpp  block.h  function.cpp  function.h  hir_builder.cpp  hir_builder.h  host_reg.h  instr.cpp  instr.h  ir.inc  ir_meta.cpp  ir_meta.h  ir_types.h  location.cpp  location.h  module.cpp  module.h  opcodes.h  terminal.cpp  terminal.h
source/runtime/ir/opts/: cfg_analysis_pass.cpp  cfg_analysis_pass.h  const_folding_pass.cpp  const_folding_pass.h  dataflow_analysis_pass.cpp  dataflow_analysis_pass.h  deadcode_elimination_pass.cpp  deadcode_elimination_pass.h  flags_elimination_pass.cpp  flags_elimination_pass.h  local_elimination_pass.cpp  local_elimination_pass.h  pass_pipeline.cpp  pass_pipeline.h  register_alloc_pass.cpp  register_alloc_pass.h  reid_instr_pass.cpp  reid_instr_pass.h  uniform_elimination_pass.cpp  uniform_elimination_pass.h
source/tests/: CMakeLists.txt  main.cpp  main_case.cpp  test.slang
source/tests/fuzz/: unicorn_interface.cpp  unicorn_interface.h  x86_fuzz.cpp
source/translator/: CMakeLists.txt  interface.cpp  interface.h  runtime.h
source/translator/arm64/: cpu.h  translator.cpp  translator.h
source/translator/linux/: CMakeLists.txt  guest_memory.cpp  guest_memory.h  loader.cpp  loader.h  main.cpp  syscalls.cpp  syscalls.h
source/translator/linux/libs/libc/: CMakeLists.txt  libc.cpp  libc.h
source/translator/linux/linker/: CMakeLists.txt  CONFIGURATION.md  GUEST_PROGRAM_SUPPORT.md  README.md  linker.cpp  linker.h  linker_bridge.cpp  linker_bridge.h  linker_config.h.in  test_guest_support.sh
source/translator/linux/linker/ldso/: dynconfig.h  dynlibc.h  dynlink.c  dynlink.h
source/translator/linux/tests/: CMakeLists.txt  bad_pointer_x86_64  bad_pointer_x86_64.S  build_real_tests.sh  gen_bad_pointer_x86_64.py  gen_hello_elf.py  gen_hello_x86_64.py  gen_loop_x86_64.py  gen_smc_x86_64.py  hello.S  hello_aarch64  hello_x86_64  hello_x86_64.S  loop_x86_64  loop_x86_64.S  main.c  real_busy.c  real_busy_aarch64  real_busy_aarch64.strace.txt  real_busy_musl_x86_64  real_busy_x86_64  real_busy_x86_64.strace.txt  real_hello.c  real_hello_aarch64  real_hello_aarch64.strace.txt  real_hello_musl_x86_64  real_hello_musl_x86_64.strace.txt  real_hello_x86_64  real_hello_x86_64.strace.txt  smc_x86_64  smc_x86_64.S
source/translator/x86/: cpu.h  translator.cpp  translator.h
